--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Customer Registration Form</h1>
-    <form action="/display-info.html" method="GET" onsubmit="checkInfo(event)">
+    <form action="#" onsubmit="checkInfo(event)">
       <label for="fname">First name:</label>
       <input type="text" name="fname" id="fname" placeholder="ex. Timmy" />
       <label for="lname">Last name:</label>
